--- a/about.html
+++ b/about.html
@@ -17,15 +17,20 @@
   <meta property="og:url" content="https://www.alltoolai.com/about">
   <meta property="og:title" content="About All Tool AI | Our Mission and Story">
   <meta property="og:description" content="Learn about our mission to provide free, fast, and secure web-based applications for everyone.">
-  <meta property="og:image" content="https://www.alltoolai.com/assets/svg/logo.svg">
+  <meta property="og:image" content="https://www.alltoolai.com/assets/icon/favicon.svg">
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="About All Tool AI | Our Mission and Story">
   <meta name="twitter:description" content="Discover our commitment to providing accessible and private tools for a global audience.">
-  <meta name="twitter:image" content="https://www.alltoolai.com/assets/svg/logo.svg">
+  <meta name="twitter:image" content="https://www.alltoolai.com/assets/icon/favicon.svg">
 
   <!-- FAVICON -->
-  <link rel="icon" href="/assets/svg/logo.svg" type="image/svg+xml">
+  <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
+  <link rel="shortcut icon" href="/assets/icon/favicon.ico" sizes="any" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/icon/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="All Tool Ai" />
+  <link rel="manifest" href="/assets/icon/site.webmanifest" />
 
   <link rel="stylesheet" href="/assets/style/style.css" />
   <script src="/assets/js/header.js" defer></script>
