--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
   <meta property="og:url" content="https://www.alltoolai.com/contact">
   <meta property="og:title" content="Contact Us - All Tool AI">
   <meta property="og:description" content="Get in touch with the All Tool AI team. We're here to help with any questions or feedback.">
-  <meta property="og:image" content="https://www.alltoolai.com./assets/svg/logo.svg">
+  <meta property="og:image" content="https://www.alltoolai.com/assets/icon/favicon.svg">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Contact Us - All Tool AI">
@@ -25,14 +25,19 @@
   <meta name="twitter:image" content="https://www.alltoolai.com./assets/og/og-image.jpg">
 
   <!-- FAVICON -->
-  <link rel="icon" href="./assets/svg/logo.svg" type="image/svg+xml">
+  <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
+  <link rel="shortcut icon" href="/assets/icon/favicon.ico" sizes="any" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/icon/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="All Tool Ai" />
+  <link rel="manifest" href="/assets/icon/site.webmanifest" />
 
-  <link rel="stylesheet" href="./assets/style/style.css" />
-  <link rel="stylesheet" href="./assets/style/contact.css" />
+  <link rel="stylesheet" href="/assets/style/style.css" />
+  <link rel="stylesheet" href="/assets/style/contact.css" />
     
-  <script src="./assets/js/header.js" defer></script>
-  <script src="./assets/js/footer.js" defer></script>
-  <script src="./assets/js/main.js" defer></script>
+  <script src="/assets/js/header.js" defer></script>
+  <script src="/assets/js/footer.js" defer></script>
+  <script src="/assets/js/main.js" defer></script>
 
   <style>
     .color-contact{
