--- a/images-to-pdf.html
+++ b/images-to-pdf.html
@@ -50,7 +50,7 @@
         "@id": "https://www.alltoolai.com/#organization",
         "name": "AlltoolAI",
         "url": "https://www.alltoolai.com/",
-        "logo": "https://www.alltoolai.com/assets/svg/logo.svg"
+        "logo": "https://www.alltoolai.com/assets/icon/favicon.svg"
       },
       {
         "@type": "WebPage",
@@ -154,7 +154,12 @@
   </script>   
 
   <!-- FAVICON -->
-  <link rel="icon" href="/assets/svg/logo.svg" type="image/svg+xml">
+  <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
+  <link rel="shortcut icon" href="/assets/icon/favicon.ico" sizes="any" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/icon/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="All Tool Ai" />
+  <link rel="manifest" href="/assets/icon/site.webmanifest" />
 
   <!-- Preconnect for Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -487,4 +492,5 @@
 <script src="/assets/pdf/images-to-pdf.js" defer></script>
 
 </body>
+
 </html>
