--- a/rearrange-pdf-pages.html
+++ b/rearrange-pdf-pages.html
@@ -40,7 +40,7 @@
     "applicationCategory": "BrowserApplication",
     "operatingSystem": "Web",
     "url": "https://www.alltoolai.com/rearrange-pdf-pages",
-    "image": "https://www.alltoolai.com/assets/svg/logo.svg",
+    "image": "https://www.alltoolai.com/assets/icon/favicon.svg",
     "description": "Rearrange, rotate, delete or reorder PDF pages 100% offline in your browser. Free forever, unlimited, no watermarks. Fast and secure files never leave your device.",
     "offers": {
       "@type": "Offer",
@@ -142,7 +142,12 @@
   </script>
 
   <!-- FAVICON -->
-  <link rel="icon" href="/assets/svg/logo.svg" type="image/svg+xml">
+  <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
+  <link rel="shortcut icon" href="/assets/icon/favicon.ico" sizes="any" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/icon/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="All Tool Ai" />
+  <link rel="manifest" href="/assets/icon/site.webmanifest" />
 
   <!-- Preconnect for Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
