--- a/url-qr-code-generator.html
+++ b/url-qr-code-generator.html
@@ -61,7 +61,7 @@
       "@type": "Organization",
       "name": "AllToolAI",
       "url": "https://www.alltoolai.com",
-      "logo": { "@type": "ImageObject", "url": "https://www.alltoolai.com/assets/svg/logo.svg" }
+      "logo": { "@type": "ImageObject", "url": "https://www.alltoolai.com/assets/icon/favicon.svg" }
     },
     "inLanguage": "en",
     "areaServed": ["Worldwide", "US", "GB", "CA", "AU", "IN", "DE", "FR", "ES", "IT", "NL", "AE", "SA", "SG", "MY", "PH", "ID", "JP", "KR", "NG", "ZA", "EG", "BR", "MX", "AR"]
@@ -118,7 +118,12 @@
   </script>
 
   <!-- FAVICON -->
-  <link rel="icon" href="/assets/svg/logo.svg" type="image/svg+xml">
+  <link rel="icon" type="image/png" href="/assets/icon/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/assets/icon/favicon.svg" sizes="any" />
+  <link rel="shortcut icon" href="/assets/icon/favicon.ico" sizes="any" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/icon/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="All Tool Ai" />
+  <link rel="manifest" href="/assets/icon/site.webmanifest" />
 
   <!-- Preconnect for Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
