--- a/index.html
+++ b/index.html
@@ -59,11 +59,6 @@
               "priceCurrency": "USD",
               "availability": "https://schema.org/InStock"
             },
-            "aggregateRating": {
-              "@type": "AggregateRating",
-              "ratingValue": "4.8",
-              "reviewCount": "500"
-            }
           }
         },
         {
@@ -82,11 +77,6 @@
               "priceCurrency": "USD",
               "availability": "https://schema.org/InStock"
             },
-            "aggregateRating": {
-              "@type": "AggregateRating",
-              "ratingValue": "4.9",
-              "reviewCount": "600"
-            }
           }
         },
         {
@@ -105,11 +95,6 @@
               "priceCurrency": "USD",
               "availability": "https://schema.org/InStock"
             },
-            "aggregateRating": {
-              "@type": "AggregateRating",
-              "ratingValue": "4.7",
-              "reviewCount": "450"
-            }
           }
         },
         {
@@ -128,11 +113,6 @@
               "priceCurrency": "USD",
               "availability": "https://schema.org/InStock"
             },
-            "aggregateRating": {
-              "@type": "AggregateRating",
-              "ratingValue": "4.8",
-              "reviewCount": "400"
-            }
           }
         },
         {
@@ -151,11 +131,6 @@
               "priceCurrency": "USD",
               "availability": "https://schema.org/InStock"
             },
-            "aggregateRating": {
-              "@type": "AggregateRating",
-              "ratingValue": "4.9",
-              "reviewCount": "550"
-            }
           }
         },
         {
@@ -174,11 +149,6 @@
               "priceCurrency": "USD",
               "availability": "https://schema.org/InStock"
             },
-            "aggregateRating": {
-              "@type": "AggregateRating",
-              "ratingValue": "4.7",
-              "reviewCount": "700"
-            }
           }
         },
         {
@@ -197,11 +167,6 @@
               "priceCurrency": "USD",
               "availability": "https://schema.org/InStock"
             },
-            "aggregateRating": {
-              "@type": "AggregateRating",
-              "ratingValue": "4.8",
-              "reviewCount": "300"
-            }
           }
         }
       ]
@@ -370,7 +335,7 @@
                           <path d="M21 15v6" />
                         </svg>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">Image Tools</h1>
+                      <h2 class="text-2xl font-bold mb-4">Image Tools</h2>
                       <p class="text-base">Free AI image tools to edit, resize, enhance, and convert photos online. Perfect for designers, marketers, and students in the USA, UK, India, Indonesia, Brazil, and worldwide. Fast, secure, and unlimited.</p>
                     </a>
                   </div>
@@ -385,7 +350,7 @@
                           <path d="M11 15v6h1a2 2 0 0 0 2 -2v-2a2 2 0 0 0 -2 -2h-1z" />
                         </svg>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">PDF Tools</h1>
+                      <h2 class="text-2xl font-bold mb-4">PDF Tools</h2>
                       <p class="text-base">Convert, merge, split, and compress PDF files instantly. Our free online PDF tools work globally and ensure your data is 100% safe. Trusted by users across the USA, UK, Europe, and Asia.</p>
                     </a>
                   </div>
@@ -400,7 +365,7 @@
                           <path d="M10 15l4 6" /><path d="M10 21l4 -6" />
                         </svg>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">Text Tools</h1>
+                      <h2 class="text-2xl font-bold mb-4">Text Tools</h2>
                       <p class="text-base">Analyze, optimize, perfect your writing and writing with the ultimate online text formatter. Ideal for students, bloggers, and teams in India, Pakistan, Philippines, USA. Available worldwide.</p>
                     </a>
                   </div>
@@ -416,7 +381,7 @@
                           <path d="M12 17l0 .01" /><path d="M16 17l0 .01" />
                         </svg>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">Calculator Tools</h1>
+                      <h2 class="text-2xl font-bold mb-4">Calculator Tools</h2>
                       <p class="text-base">Use our smart online calculator for math, finance, and everyday calculations. Fast, reliable, and accessible worldwide from the USA, India, Pakistan, Nigeria.</p>
                     </a>
                   </div>
@@ -430,7 +395,7 @@
                           <path d="M10 13l-1.5 -1.5" /><path d="M7 16l-1.5 -1.5" />
                         </svg>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">Unit Converter Tools</h1>
+                      <h2 class="text-2xl font-bold mb-4">Unit Converter Tools</h2>
                       <p class="text-base">Convert length, weight, temperature, and more with our free AI unit converter. Works instantly for users in India, USA, UK, Canada, and across the globe.</p>
                     </a>
                   </div>
@@ -447,7 +412,7 @@
                           <path d="M17 17l3 0" /><path d="M20 17l0 3" />
                         </svg>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">QR Generator Tools</h1>
+                      <h2 class="text-2xl font-bold mb-4">QR Generator Tools</h2>
                       <p class="text-base">Create free QR codes for links, text, and contacts. Our QR generator is fast, unlimited, and trusted by users worldwide from Asia, North America, India, Indonesia, Brazil, Japan.
                       </p>
                     </a>
@@ -463,7 +428,7 @@
                           <path d="M9 17v-13h10v13" /><path d="M9 8h10" />
                         </svg>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">Audio Tools</h1>
+                      <h2 class="text-2xl font-bold mb-4">Audio Tools</h2>
                       <p class="text-base">Convert, edit, and manage audio files with AI powered tools. Secure, fast, and free for users in India, Brazil, Turkey, USA, UK, and globally.</p>
                     </a>
                   </div>
@@ -479,16 +444,16 @@
 
                 <section class="mx-auto text-slate-800 dark:text-slate-200 max-w-4xl">
                   <h2 class="text-3xl font-bold mb-4 text-center">Why choose All Tool AI?</h2>
-                  <p class="text-base mb-3">
+                  <p class="text-lg mb-3">
                     All Tool AI is your all in one toolkit for everyday tasks images, PDFs, text, audio, QR codes, unit conversion, and calculators. It’s fast, easy, and built to be the best free solution for students, creators, marketers, and teams.
                   </p>
-                  <p class="text-base mb-3">
+                  <p class="text-lg mb-3">
                     Lifetime free, unlimited use. No sign up. Privacy first: your information is 100% confidential and secure. Optimized for speed worldwide.
                   </p>
-                  <p class="text-base">
+                  <p class="text-lg">
                     All Tool AI is trusted globally whether you’re in the USA, UK, Canada, Australia, India, Indonesia, Brazil, Japan, Germany, France, Spain, Italy, Mexico, UAE, Saudi Arabia, Nigeria, South Africa, Philippines, Pakistan, Vietnam, Thailand, Malaysia, Singapore, the Netherlands, or beyond.
                   </p>
-                  <p class="text-base">
+                  <p class="text-lg">
                     Built for students, creators, professionals, and teams worldwide.
                   </p>
                 </section>
@@ -501,22 +466,18 @@
                   <h3 class="text-3xl font-bold mb-4 text-center">Frequently asked questions</h3>
 
                   <h4 class="text-2xl font-semibold mb-2">Is All Tool AI really free and unlimited?</h4>
-                  <p class="text-base font-medium mb-6">Yes. All core tools are free forever with no daily limits and no sign up required.</p>
+                  <p class="text-lg font-medium mb-6">Yes. All core tools are free forever with no daily limits and no sign up required.</p>
 
                   <h3 class="text-2xl font-semibold mb-2">Is my information 100% confidential and secure?</h3>
-                  <p class="text-base font-medium mb-6">Absolutely. We use privacy first processing and do not sell personal data. When possible, processing happens in your browser; server side tasks are handled securely and files are removed after processing.</p>
+                  <p class="text-lg font-medium mb-6">Absolutely. We use privacy first processing and do not sell personal data. When possible, processing happens in your browser; server side tasks are handled securely and files are removed after processing.</p>
 
                   <h3 class="text-2xl font-semibold mb-2">Do the tools work worldwide?</h3>
-                  <p class="text-base font-medium mb-6">Yes, All Tool AI is optimized for global use and trusted across the USA, UK, India, Canada, Australia, Europe, and beyond.</p>
+                  <p class="text-lg font-medium mb-6">Yes, All Tool AI is optimized for global use and trusted across the USA, UK, India, Canada, Australia, Europe, and beyond.</p>
 
                   <h3 class="text-2xl font-semibold mb-2">Do I need to create an account?</h3>
-                  <p class="text-base font-medium mb-6">No account is needed. Just open a tool and start using it immediately.</p>
+                  <p class="text-lg font-medium mb-6">No account is needed. Just open a tool and start using it immediately.</p>
                 </section>
                 
-              </div>
-
-              <div class="my-4">
-                <div id="midad-3" aria-label="Mid Ad 3"></div>
               </div>
 
             </div>
