--- a/base64-to-image.html
+++ b/base64-to-image.html
@@ -28,8 +28,8 @@
   <meta name="twitter:image" content="https://www.alltoolai.com/assets/og/base64-to-image.png" />
 
   <!-- Hreflang (safe default if you only have English for now) -->
-  <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/image-crop" />
-  <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/image-crop" />
+  <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/base64-to-image" />
+  <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/base64-to-image" />
 
   <script type="application/ld+json">
   {
