--- a/calculator-tools.html
+++ b/calculator-tools.html
@@ -28,8 +28,8 @@
   <meta name="twitter:image" content="https://www.alltoolai.com/assets/img/calculator-tools-og.png" />
 
   <!-- Hreflang: keep only if pages exist. For now, x-default and en are safe -->
-  <link rel="alternate" href="https://www.alltoolai.com/" hreflang="x-default">
-  <link rel="alternate" href="https://www.alltoolai.com/" hreflang="en">
+  <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/calculator-tools" />
+  <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/calculator-tools" />
 
   <!-- Organization -->
   <script type="application/ld+json">
@@ -240,8 +240,8 @@
                           </svg>
                         </div>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">Fertilizer Calculator</h1>
-                      <p class="text-base">Calculate N.P.K application rates by area and target nutrient needs for lawns, gardens, and crops.</p>
+                      <h2 class="text-2xl font-bold mb-4">Fertilizer Calculator</h2>
+                      <p class="text-lg">Calculate N.P.K application rates by area and target nutrient needs for lawns, gardens, and crops.</p>
                     </a>
                   </div>
 
@@ -266,8 +266,8 @@
                           </svg>
                         </div>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">Age Calculator</h1>
-                      <p class="text-base">Get exact age in years, months, and days. Also see days until your next birthday.</p>
+                      <h2 class="text-2xl font-bold mb-4">Age Calculator</h2>
+                      <p class="text-lg">Get exact age in years, months, and days. Also see days until your next birthday.</p>
                     </a>
                   </div>
 
@@ -289,8 +289,8 @@
                           </svg>
                         </div>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">Calorie Calculator</h1>
-                      <p class="text-base">Estimate daily calorie needs using Mifflin,St Jeor. Customize by activity level and goals.</p>
+                      <h2 class="text-2xl font-bold mb-4">Calorie Calculator</h2>
+                      <p class="text-lg">Estimate daily calorie needs using Mifflin,St Jeor. Customize by activity level and goals.</p>
                     </a>
                   </div>
 
@@ -313,8 +313,8 @@
                           </svg>
                         </div>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">BMI Calculator</h1>
-                      <p class="text-base">Check your Body Mass Index (BMI) and category with metric or imperial units.</p>
+                      <h2 class="text-2xl font-bold mb-4">BMI Calculator</h2>
+                      <p class="text-lg">Check your Body Mass Index (BMI) and category with metric or imperial units.</p>
                     </a>
                   </div>
 
@@ -337,8 +337,8 @@
                           </svg>
                         </div>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">BMR Calculator</h1>
-                      <p class="text-base">Find your Basal Metabolic Rate (BMR) and daily energy expenditure.</p>
+                      <h2 class="text-2xl font-bold mb-4">BMR Calculator</h2>
+                      <p class="text-lg">Find your Basal Metabolic Rate (BMR) and daily energy expenditure.</p>
                     </a>
                   </div>
 
@@ -366,8 +366,8 @@
                           </svg>
                         </div>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">Compound Interest Calculator</h1>
-                      <p class="text-base">Project investment growth with compounding frequency and contributions.</p>
+                      <h2 class="text-2xl font-bold mb-4">Compound Interest Calculator</h2>
+                      <p class="text-lg">Project investment growth with compounding frequency and contributions.</p>
                     </a>
                   </div>
 
@@ -389,8 +389,8 @@
                           </svg>
                         </div>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">Loan Calculator</h1>
-                      <p class="text-base">Compute monthly payments, total interest, and amortization schedules.</p>
+                      <h2 class="text-2xl font-bold mb-4">Loan Calculator</h2>
+                      <p class="text-lg">Compute monthly payments, total interest, and amortization schedules.</p>
                     </a>
                   </div>
 
@@ -416,8 +416,8 @@
                           </svg>
                         </div>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">Date Calculator</h1>
-                      <p class="text-base">Add or subtract days, find days between dates, and calculate due dates.</p>
+                      <h2 class="text-2xl font-bold mb-4">Date Calculator</h2>
+                      <p class="text-lg">Add or subtract days, find days between dates, and calculate due dates.</p>
                     </a>
                   </div>
 
@@ -442,8 +442,8 @@
                           </svg>
                         </div>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">IP Subnet Calculator</h1>
-                      <p class="text-base">CIDR, subnet mask, host ranges, and usable IPs for IPv4 subnets.</p>
+                      <h2 class="text-2xl font-bold mb-4">IP Subnet Calculator</h2>
+                      <p class="text-lg">CIDR, subnet mask, host ranges, and usable IPs for IPv4 subnets.</p>
                     </a>
                   </div>
 
@@ -468,8 +468,8 @@
                           </svg>
                         </div>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">Percentage Calculator</h1>
-                      <p class="text-base">Find percentages, percentage increase/decrease, and part whole relationships.</p>
+                      <h2 class="text-2xl font-bold mb-4">Percentage Calculator</h2>
+                      <p class="text-lg">Find percentages, percentage increase/decrease, and part whole relationships.</p>
                     </a>
                   </div>
 
@@ -494,8 +494,8 @@
                           </svg>
                         </div>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">Scientific Calculator</h1>
-                      <p class="text-base">Advanced functions: exponents, roots, logs, trig, constants, and memory.</p>
+                      <h2 class="text-2xl font-bold mb-4">Scientific Calculator</h2>
+                      <p class="text-lg">Advanced functions: exponents, roots, logs, trig, constants, and memory.</p>
                     </a>
                   </div>
 
@@ -519,8 +519,8 @@
                           </svg>
                         </div>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">Math Equation Solver</h1>
-                      <p class="text-base">Solve linear, quadratic, and polynomial equations step-by-step.</p>
+                      <h2 class="text-2xl font-bold mb-4">Math Equation Solver</h2>
+                      <p class="text-lg">Solve linear, quadratic, and polynomial equations step-by-step.</p>
                     </a>
                   </div>
 
@@ -544,8 +544,8 @@
                           </svg>
                         </div>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">Algebra Math Solver</h1>
-                      <p class="text-base">Simplify expressions, factor, expand, and solve algebra problems.</p>
+                      <h2 class="text-2xl font-bold mb-4">Algebra Math Solver</h2>
+                      <p class="text-lg">Simplify expressions, factor, expand, and solve algebra problems.</p>
                     </a>
                   </div>
 
@@ -569,8 +569,8 @@
                           </svg>
                         </div>
                       </div>
-                      <h1 class="text-2xl font-bold mb-4">Trigonometry Calculator</h1>
-                      <p class="text-base">Compute sine, cosine, tangent, angles, sides, and radian degree conversions.</p>
+                      <h2 class="text-2xl font-bold mb-4">Trigonometry Calculator</h2>
+                      <p class="text-lg">Compute sine, cosine, tangent, angles, sides, and radian degree conversions.</p>
                     </a>
                   </div>
 
@@ -585,13 +585,13 @@
 
                 <section class="mx-auto text-slate-800 dark:text-slate-200 max-w-4xl">
                   <h2 class="text-3xl font-bold mb-4 text-center">Free calculator tools for everyone, everywhere</h2>
-                  <p class="text-base mb-3">
+                  <p class="text-lg mb-3">
                     Fast, accurate, and privacy-first calculators for health, finance, math, and daily tasks. Top quality, best performance, and lifetime free unlimited use. No signup required and your information is 100% confidential and secure.
                   </p>
-                  <p class="text-base mb-3">
+                  <p class="text-lg mb-3">
                     Works worldwide: United States, United Kingdom, Canada, Australia, India, Indonesia, Brazil, Mexico, Germany, France, Spain, Italy, Netherlands, UAE, Saudi Arabia, Japan, Philippines, Pakistan, Nigeria, South Africa, Vietnam, Thailand, Malaysia, Singapore, and more.
                   </p>
-                  <p class="text-base">
+                  <p class="text-lg">
                     Popular tools include: BMI, BMR, Calorie, Age, Loan, Compound Interest, Percentage, Date, Scientific, Algebra, Equation Solver, Trigonometry, IP Subnet, and Fertilizer calculators.
                   </p>
                 </section>
@@ -603,25 +603,21 @@
                 <section class="text-left max-w-4xl mx-auto">
                   <h3 class="text-3xl font-bold mb-4 text-center">Frequently asked questions</h3>
                   <h4 class="text-xl font-medium mt-4 mb-2">Are these calculators free and unlimited?</h4>
-                  <p class="text-base mb-4">Yes. All tools are 100% free with unlimited usage and no signup.</p>
+                  <p class="text-lg mb-4">Yes. All tools are 100% free with unlimited usage and no signup.</p>
 
                   <h4 class="text-xl font-medium mt-4 mb-2">Is my information private and secure?</h4>
-                  <p class="text-base mb-4">Yes. We prioritize privacy and security. Your personal inputs are not stored and your data remains confidential.</p>
+                  <p class="text-lg mb-4">Yes. We prioritize privacy and security. Your personal inputs are not stored and your data remains confidential.</p>
 
                   <h4 class="text-xl font-medium mt-4 mb-2">Do the calculators work on mobile?</h4>
-                  <p class="text-base mb-4">Absolutely. All tools work smoothly on phones, tablets, and desktops.</p>
+                  <p class="text-lg mb-4">Absolutely. All tools work smoothly on phones, tablets, and desktops.</p>
 
                   <h4 class="text-xl font-medium mt-4 mb-2">Which calculators are included?</h4>
-                  <p class="text-base mb-4">Health (BMI, BMR, Calorie, Age), Finance (Loan, Compound Interest, Percentage), Math (Scientific, Algebra, Equation Solver, Trigonometry), and Utility (Date, IP Subnet, Fertilizer).</p>
+                  <p class="text-lg mb-4">Health (BMI, BMR, Calorie, Age), Finance (Loan, Compound Interest, Percentage), Math (Scientific, Algebra, Equation Solver, Trigonometry), and Utility (Date, IP Subnet, Fertilizer).</p>
 
                   <h4 class="text-xl font-medium mt-4 mb-2">Can I share results?</h4>
-                  <p class="text-base">Yes. You can copy results and share links to each tool for quick access.</p>
+                  <p class="text-lg">Yes. You can copy results and share links to each tool for quick access.</p>
                 </section>
                 
-              </div>
-
-              <div class="my-4">
-                <div id="midad-3" aria-label="Mid Ad 3"></div>
               </div>
 
             </div>
@@ -649,7 +645,6 @@
 
 <!-- :: Footer PLACEHOLDER :: -->
 <div id="footer-placeholder"></div>
-
 
 </body>
 </html>
