--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
   <meta name="twitter:image" content="https://www.alltoolai.com/assets/og/og-image.jpg">
 
   <!-- Hreflang: keep only if pages exist. For now, x-default and en are safe -->
-  <link rel="alternate" href="https://www.alltoolai.com/" hreflang="x-default">
-  <link rel="alternate" href="https://www.alltoolai.com/" hreflang="en">
+  <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/" />
+  <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/" />
 
   <script type="application/ld+json">
     {
