--- a/image-rotate-flip.html
+++ b/image-rotate-flip.html
@@ -314,27 +314,27 @@
                       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mt-4 text-left">
                         <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                           <h4 class="text-lg font-semibold mb-2">100% Private</h4>
-                          <p>Everything runs locally in your browser. Nothing is uploaded.</p>
+                          <p class="text-base">Everything runs locally in your browser. Nothing is uploaded.</p>
                         </div>
                         <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                           <h4 class="text-lg font-semibold mb-2">Free & Unlimited</h4>
-                          <p>Lifetime free no account, no paywalls, no watermarks.</p>
+                          <p class="text-base">Lifetime free no account, no paywalls, no watermarks.</p>
                         </div>
                         <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                           <h4 class="text-lg font-semibold mb-2">Rotate, Mirror, Straighten</h4>
-                          <p>Rotate 90/180/270°, flip horizontally/vertically, and fine tune with the Straighten slider.</p>
+                          <p class="text-base">Rotate 90/180/270°, flip horizontally/vertically, and fine tune with the Straighten slider.</p>
                         </div>
                         <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                           <h4 class="text-lg font-semibold mb-2">Multiple Formats</h4>
-                          <p>Open JPG, PNG, or WebP and export to PNG/JPG/WEBP.</p>
+                          <p class="text-base">Open JPG, PNG, or WebP and export to PNG/JPG/WEBP.</p>
                         </div>
                         <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                           <h4 class="text-lg font-semibold mb-2">Crisp Quality</h4>
-                          <p>Full-resolution export. Choose PNG/WebP for sharp results or high quality JPG for smaller size.</p>
+                          <p class="text-base">Full-resolution export. Choose PNG/WebP for sharp results or high quality JPG for smaller size.</p>
                         </div>
                         <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                           <h4 class="text-lg font-semibold mb-2">Works Everywhere</h4>
-                          <p>Optimized for Chrome, Edge, Firefox, Safari desktop and mobile.</p>
+                          <p class="text-base">Optimized for Chrome, Edge, Firefox, Safari desktop and mobile.</p>
                         </div>
                       </div>
                     </section>
@@ -344,19 +344,19 @@
                       <div class="grid grid-cols-1 md:grid-cols-2 gap-4 text-left">
                         <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                           <h4 class="text-lg font-semibold mb-2">Fix Sideways Photos</h4>
-                          <p>Rotate 90/180/270° to correct camera orientation or EXIF issues.</p>
+                          <p class="text-base">Rotate 90/180/270° to correct camera orientation or EXIF issues.</p>
                         </div>
                         <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                           <h4 class="text-lg font-semibold mb-2">Mirror Selfies</h4>
-                          <p>Flip horizontally for a true mirror image or vertically for creative effects.</p>
+                          <p class="text-base">Flip horizontally for a true mirror image or vertically for creative effects.</p>
                         </div>
                         <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                           <h4 class="text-lg font-semibold mb-2">Straighten Horizons</h4>
-                          <p>Use the Straighten slider to align landscapes and product shots.</p>
+                          <p class="text-base">Use the Straighten slider to align landscapes and product shots.</p>
                         </div>
                         <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                           <h4 class="text-lg font-semibold mb-2">Screenshots & Documents</h4>
-                          <p>Rotate scanned pages, receipts, and screenshots for easy reading.</p>
+                          <p class="text-base">Rotate scanned pages, receipts, and screenshots for easy reading.</p>
                         </div>
                       </div>
                     </section>
@@ -377,7 +377,7 @@
 
                     <section class="mb-10 text-left">
                       <h3 class="text-2xl font-semibold mb-4 text-center">How to rotate or flip an image online</h3>
-                      <ol class="list-decimal pl-5 space-y-2">
+                      <ol class="list-decimal pl-5 space-y-2 text-lg">
                         <li>Drag & drop an image or click “Select an Image”.</li>
                         <li>Use Rotate Left/Right for 90° steps, and the Straighten slider for fine control.</li>
                         <li>Flip horizontally or vertically to mirror your photo.</li>
@@ -394,27 +394,27 @@
                       <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                         <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                           <h4 class="text-lg font-semibold mb-2">Is it private and secure?</h4>
-                          <p>Yes. Everything runs locally in your browser files never leave your device.</p>
+                          <p class="text-base">Yes. Everything runs locally in your browser files never leave your device.</p>
                         </div>
                         <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                           <h4 class="text-lg font-semibold mb-2">Which formats can I use?</h4>
-                          <p>Open JPG, PNG, or WebP. Export to PNG/JPG/WEBP.</p>
+                          <p class="text-base">Open JPG, PNG, or WebP. Export to PNG/JPG/WEBP.</p>
                         </div>
                         <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                           <h4 class="text-lg font-semibold mb-2">Can I rotate by 90/180/270°?</h4>
-                          <p>Yes use the Rotate buttons. For small tweaks, use the Straighten slider.</p>
+                          <p class="text-base">Yes use the Rotate buttons. For small tweaks, use the Straighten slider.</p>
                         </div>
                         <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                           <h4 class="text-lg font-semibold mb-2">Is it really free forever?</h4>
-                          <p>Yes lifetime free and unlimited. No signup, no watermarks, no hidden limits.</p>
+                          <p class="text-base">Yes lifetime free and unlimited. No signup, no watermarks, no hidden limits.</p>
                         </div>
                         <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                           <h4 class="text-lg font-semibold mb-2">Will the output be high quality?</h4>
-                          <p>We preserve resolution at export. PNG/WebP are great for sharp results; use high quality JPG for smaller files.</p>
+                          <p class="text-base">We preserve resolution at export. PNG/WebP are great for sharp results; use high quality JPG for smaller files.</p>
                         </div>
                         <div class="bg-slate-100 p-4 dark:bg-slate-800 rounded-lg">
                           <h4 class="text-lg font-semibold mb-2">Does it fix EXIF orientation?</h4>
-                          <p>Yes. The exported file reflects your chosen rotation/flip.</p>
+                          <p class="text-base">Yes. The exported file reflects your chosen rotation/flip.</p>
                         </div>
                       </div>
                     </section>
@@ -440,14 +440,12 @@
               <div id="sidead-1" aria-label="Sidebar Ad 1"></div>
               <div id="sidead-3" aria-label="Sidebar Ad 3"></div>
               <div id="sidead-5" aria-label="Sidebar Ad 5"></div>
-              <div id="sidead-7" aria-label="Sidebar Ad 7"></div>
             </aside>
 
             <aside class="hidden lg:flex flex-col">
               <div id="sidead-2" aria-label="Sidebar Ad 2"></div>
               <div id="sidead-4" aria-label="Sidebar Ad 4"></div>
               <div id="sidead-6" aria-label="Sidebar Ad 6"></div>
-              <div id="sidead-8" aria-label="Sidebar Ad 8"></div>
             </aside>
 
         </div>
@@ -478,5 +476,4 @@
   <script src="/assets/img/rotate.js" defer></script>
 
 </body>
-
 </html>
