--- a/image-rotate-flip.html
+++ b/image-rotate-flip.html
@@ -28,9 +28,8 @@
   <meta name="twitter:image" content="https://www.alltoolai.com/assets/og/image-rotate-flip.png" />
 
   <!-- Hreflang (safe default if you only have English for now) -->
-  <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/image-crop" />
-  <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/image-crop" />
-
+  <link rel="alternate" hreflang="en" href="https://www.alltoolai.com/image-rotate-flip" />
+  <link rel="alternate" hreflang="x-default" href="https://www.alltoolai.com/image-rotate-flip" />
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -476,4 +475,5 @@
   <script src="/assets/img/rotate.js" defer></script>
 
 </body>
+
 </html>
